--- a/componentsAndroid/FiciApp/app/src/main/res/layout/fragment_edit_component.xml
+++ b/componentsAndroid/FiciApp/app/src/main/res/layout/fragment_edit_component.xml
@@ -116,17 +116,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <ImageView
         android:id="@+id/takePictureBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_margin="@dimen/fab_margin"
-        android:background="@color/colorPrimary"
-        android:text="@string/take_picture"
-        android:textColor="@color/colorPrimaryDark"
+        android:src="@drawable/ic_baseline_add_a_photo_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"/>
+
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
