--- a/componentsAndroid/FiciApp/app/src/main/res/navigation/nav_graph.xml
+++ b/componentsAndroid/FiciApp/app/src/main/res/navigation/nav_graph.xml
@@ -19,7 +19,11 @@
 
         <action
             android:id="@+id/action_ComponentListFragment_to_ComponentEditFragment"
-            app:destination="@id/fragment_edit_component" />
+            app:destination="@id/fragment_edit_component"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/fragment_edit_component"
