--- a/componentsAndroid/FiciApp/app/src/main/res/values/colors.xml
+++ b/componentsAndroid/FiciApp/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9A031E</color>
+    <color name="colorPrimary">#02916f</color>
     <color name="colorPrimaryDark">#1E1E24</color>
-    <color name="colorAccent">#DCCCBB</color>
+    <color name="colorAccent">#ffffff</color>
     <color name="white">#ffffff</color>
 </resources>
