--- a/BeforeExam/app/src/main/res/layout/fragment_login.xml
+++ b/BeforeExam/app/src/main/res/layout/fragment_login.xml
@@ -62,8 +62,9 @@
         android:layout_gravity="center"
         android:indeterminateTint="@color/colorPrimaryDark"
         android:visibility="gone"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loginBtn" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
